# ai-cobot

./: README.md
cobot_commander/: package.xml  setup.cfg  setup.py
cobot_commander/cobot_commander/: cobot_commander.py
processor/: package.xml  setup.py
processor/processor/: llm_handler.py  processor.py  vision_handler.py
test_files/: builtInCamera_test.py  camera_calibration.py  capture_images.py  display_detected.py  display_detected_yolo.py  flask_app.py  gemini_test.py  google_vision_test.py  gripper_test.py  transformation_test.py  yolo_test.py
test_files/gemini_test/: gemini_api.py  gemini_api_v2.py  gemini_example.py
tm_commander/: CMakeLists.txt  package.xml
tm_commander/src/: commander.cpp
user_interface/: package.xml  setup.py
user_interface/user_interface/: user_interface.py
user_interface/user_interface/templates/: index.html
